<resources>
    <string name="app_name">Learning Android</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="text_view">Enter a name</string>
    <string name="button_label">OK Done</string>
    <string name="day_1">day_1_default</string>
    <string name="title_activity_user_profile">User Profile</string>
    <string name="textView5">Email Id</string>
    <string name="textView6">Password</string>
    <string name="editText6">Enter the email id</string>
    <string name="editText8">Enter your password</string>
    <string name="button">Login</string>
    <string name="button3">Go to Login Page</string>
    <string name="textView2">If you have not registered before please SignUp to continue</string>
    <string name="button2">Go to Sign UP Page</string>
    <string name="button4">Sign UP</string>
    <string name="desc_in_signup">If you have already registered please Login</string>
    <string name="sg_firstname">First Name</string>
    <string name="phone_nm">Phone number</string>
    <string name="last_name">Last Name</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="retype_password">Please re-enter password</string>
    <string name="dob">Select your Date of Birth</string>
    <string name="key_name" translatable="false">Name</string>
    <string name="key_username">Username</string>
    <string name="key_firstname">First Name</string>
    <string name="key_lastname">Last Name</string>
    <string name="key_email">Email Id</string>
    <string name="key_phone">Phone Number</string>
    <string name="u_name">Enter  your username</string>
    <string name="shortcut">Go to Dashboard</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
