<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    tools:context=".UserDetails">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/profile"
        app:layout_constraintBottom_toTopOf="@+id/key_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/key_username"
        android:layout_width="63dp"
        android:layout_height="0dp"
        android:layout_marginLeft="92dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="60dp"
        android:text="@string/key_username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"/>

    <TextView
        android:id="@+id/value_username"
        android:layout_width="58dp"
        android:layout_height="0dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="60dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <TextView
        android:id="@+id/key_firstname"
        android:layout_width="68dp"
        android:layout_height="0dp"
        android:layout_marginLeft="92dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="32dp"
        android:text="@string/key_firstname"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/key_username" />

    <TextView
        android:id="@+id/value_firstname"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="32dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/value_username" />

    <TextView
        android:id="@+id/key_lastname"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginLeft="92dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="20dp"
        android:text="@string/key_lastname"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/key_firstname" />

    <TextView
        android:id="@+id/value_lastname"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="20dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/value_firstname" />

    <TextView
        android:id="@+id/key_email"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginLeft="92dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="24dp"
        android:text="@string/key_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/key_lastname" />

    <TextView
        android:id="@+id/value_email"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="24dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/value_lastname" />

    <TextView
        android:id="@+id/key_phone"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginLeft="92dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="20dp"
        android:text="@string/key_phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/key_email" />

    <TextView
        android:id="@+id/value_phone"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:text="TextView"
        app:layout_constraintBaseline_toBaselineOf="@+id/key_phone"
        app:layout_constraintEnd_toEndOf="parent" />
</android.support.constraint.ConstraintLayout>